sites/hochschule-burgenland/applications/harbor/extensions/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harbor
  annotations:
    external-dns.kubernetes.io/provider: public
    external-dns.kubernetes.io/target: "${PUBLIC_IP}"
spec:
  parentRefs:
    - name: harbor-listeners
      kind: ListenerSet
      group: gateway.networking.k8s.io
  hostnames:
    - registry.${PUBLIC_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: harbor
          port: 80
